# VisibilityBufferInfo

./: .gitignore  AGENTS.md  BENCHMARK_RASTER_STATS_PENDING.md  CMakeLists.txt  DONUT_VISIBILITY_REMAINING.md  ProgramArgument.h  README.md  THIRD_PARTY_NOTICES.md  TVBPerf.sln  info.txt  q
SceneFingerprint/: SceneFingerprint.vcxproj  SceneFingerprint.vcxproj.filters  scene_fingerprint.cpp
TVBPerf/: Application.cpp  Application.h  ArgParser.cpp  ArgParser.h  GPUFrameTime.h  GraphicsUtils.cpp  GraphicsUtils.h  ImportedScene.h  Materials.cpp  Materials.h  MeshGeometry.cpp  MeshGeometry.h  ProgramArgument.h  RendererBase.cpp  RendererBase.h  RendererForward.cpp  RendererForward.h  SceneAssimpImporter.cpp  SceneAssimpImporter.h  SceneSynthSphere.cpp  SceneSynthSphere.h  SceneSynthSphereRuntime.cpp  SceneSynthSphereRuntime.h  TVBPerf.vcxproj  TVBPerf.vcxproj.filters  Utils.h  Win32Window.cpp  Win32Window.h  forward_PS.hlsl  forward_VS.hlsl  main.cpp  resource1.h
TVBPerf/core/: AppWindow.h
TVBPerf/dx12_wrap/: Dx12Device.cpp  Dx12Device.h  Dx12Queue.cpp  Dx12Queue.h
TVBPerf/dx_util/: DX12Context.cpp  DX12Context.h  DX12Fence.cpp  DX12Fence.h  DX12FrameContext.cpp  DX12FrameContext.h  DX12List.cpp  DX12List.h  DX12QueryBuf.cpp  DX12QueryBuf.h  DX12UtilsStruct.cpp  DX12UtilsStruct.h  DescriptorUtils.cpp  DescriptorUtils.h  Fence.cpp  Fence.h  GpuFrameTimer.cpp  GpuFrameTimer.h  GraphicsUtils.cpp  ResourceUtils.cpp  ShaderUtils.cpp  ShaderUtils.h
TVBPerf/render/: Camera.cpp  Camera.h  ProcedureBase.cpp  ProcedureBase.h  RendererBase.cpp  RendererBase.h  RendererDeferred.cpp  RendererDeferred.h  RendererDeferredPrepass.cpp  RendererDeferredPrepass.h  RendererFactory.cpp  RendererForward.cpp  RendererForward.h  RendererForwardPrepass.cpp  RendererForwardPrepass.h  RendererTVB.cpp  RendererTVB.h  RendererTVBGBuffer.cpp  RendererTVBGBuffer.h
TVBPerf/scene/: GenedMesh.cpp  GenedMesh.h  ImportedScene.cpp  ImportedScene.h  Materials.cpp  MeshGeometry.cpp  MeshGeometry.h  SceneAssimpImporter.cpp  SceneAssimpImporter.h  SceneBuilder.cpp  SceneDataCPU.cpp  SceneDataCPU.h  SceneDataGPU.h  SceneFingerprint.cpp  SceneFingerprint.h  SceneLoader.cpp  SceneLoader.h  SceneResourceBuilder.cpp  SceneResourceBuilder.h  SceneSynthSphere.cpp  SceneSynthSphere.h  SceneSynthSphereRuntime.cpp  SceneSynthSphereRuntime.h  scene_fingerprint.cpp
TVBPerf/util/: ArgParser.cpp  ArgParser.h  FrameCounter.cpp  FrameCounter.h  GraphicsUtils.cpp  GraphicsUtils.h  Logger.cpp  Logger.h  ProgramArgument.cpp  ProgramArgument.h  SceneAssimpImporter.cpp  SceneAssimpImporter.h  Utils.h
assets/shaders/: TVB_gbuffer_PS.hlsl  TVB_lighting_PS.hlsl  TVB_visibility_PS.hlsl  TVB_visibility_VS.hlsl  benchmark_raster_stats_CS.hlsl  common_barycentric.hlsli  common_gbuffer.hlsli  common_input_struct.hlsli  common_material.hlsli  common_material_data.hlsli  debug_view_PS.hlsl  debug_view_VS.hlsl  deferred_geometry_PS.hlsl  deferred_geometry_VS.hlsl  deferred_lighting_PS.hlsl  deferred_lighting_VS2.hlsl  depth_prepass_VS.hlsl  donut_brdf.hlsli  donut_common_input.hlsli  donut_deferred_geometry_VS.hlsl  donut_deferred_lighting_CS_copy.hlsl  donut_deferred_lighting_cb.h  donut_depth_PS.hlsl  donut_depth_VS.hlsl  donut_depth_pre_PS.hlsl  donut_environment_map_PS.hlsl  donut_gbuffer.hlsli  donut_gbuffer_PS.hlsl  donut_gbuffer_VS.hlsl  donut_gbuffer_common.hlsli  donut_histogram_CS.hlsl  donut_light_cb.h  donut_motion_vectors_PS.hlsl  donut_ssao_blur_CS.hlsl  donut_ssao_cb.h  donut_tonemapping_PS.hlsl  donut_vis_gbuffer_PS.hlsl  donut_visibility_PS.hlsl  donut_visibility_VS.hlsl  forward_PS.hlsl  (+5 more)
datas/ex1/: camera.csv  temp_deferred.csv  temp_deferred_prepass.csv  temp_forward.csv  temp_forward_prepass.csv  temp_scene_fingerprint.csv  temp_visbuf.csv  temp_visbuf_gbuffer.csv
docs/: 1주차_구현_로드맵.txt  1주차_발표_최종.txt  1주차_피드백.txt  2주차.txt  3주차 visbuf 정리.txt  4주차.txt  ML.txt  TODO_pending.txt  VB variation.txt  assimp_scene_fingerprint_plan.md  did.txt  donut deferred buffers.txt  donut_scene_contract.txt  new진행상황.txt  new코드.txt  new프롬프트.txt  계획.txt  명세.txt  발표.txt  보고서 초안.txt  수식.txt  실험일지.txt  프롬프트.txt  프롬프트_진행상황.txt
docs/prev/: 1주차_구현_로드맵.txt  1주차_발표_TVB확장.txt  1주차_발표_대본.txt  구현 관련 참고사항.txt  샘플 링크.txt  연구방향.txt
docs/prev_1/: 1주차_발표_논리 전개.txt  links.md
docs/prev_2/: 2주차.txt  scene_fingerprint_sample.csv  라이센스 정리.txt
docs/prev_3/: 3주차.txt  구간.txt  보고서 초안.txt  실험일지.txt  장점요약.txt
include/: Application.h  Constants.h  ProgramArgument.h  Win32Window.h
include/dx_util/: DescriptorUtils.h  DeviceUtils.h  DxGraphicsPSO.h  Fence.h  GpuFrameTimer.h  ResourceUtils.h  ShaderUtils.h  UploadConstBuf.h
include/engine/: GPUQueue.h  GPUResource.h  GraphicsPipeline.h  GraphicsQueue.h  Material.h  MaterialCPU.h  MaterialGPU.h  ResourceManagerFrame.h  ResourceManagerSampler.h  ResourceManagerShader.h  ResourceManagers.h  ResourceViewBuilder.h  RootSignatureBuilder.h  Texture.h  TextureHandle.h  TextureLoader.h
include/math/: AABB.h
include/render/: Camera.h  CameraPath.h  CameraPathController.h  RendererBase.h  RendererDeferred.h  RendererDeferredPrepass.h  RendererForward.h  RendererForwardPrepass.h  RendererTVB.h  RendererTVBGBuffer.h  RootParameter.h  VisBufResourceBuilder.h  VisBufResources.h
include/scene/: GenedMesh.h  Light.h  Material.h  SceneAssimpImporter.h  SceneBuilder.h  SceneDataCPU.h  (+7 more)
scripts/: README.md  combined_sobol_samples_1000.json  combined_sobol_samples_1000_narrowed.json  geometry_sweep_alu.json  geometry_sweep_alu_batch.json  plot.ps1  plot.py  plot_geom_count.txt  plot_settings.txt  res1-1.csv  res1-10.csv  res1-11.csv  res1-12.csv  res1-13.csv  res1-14.csv  res1-15.csv  res1-16.csv  res1-17.csv  res1-18.csv  res1-19.csv  res1-2.csv  res1-3.csv  res1-4.csv  res1-5.csv  res1-6.csv  res1-7.csv  res1-8.csv  res1-9.csv  run.ps1  run.py  run_all.ps1  standard_camera.csv  standard_camera_bistro.csv
src/: Application.cpp  ProgramArgument.cpp  Win32Window.cpp  main.cpp
tools/: bootstrap_assimp.ps1
trash/: RenderVariant.h  RendererBindingFactory.h  RendererBindings.cpp  RendererBindings.h  RendererInfos.h
(+564 files in other folders)
